# SimpleFS

./: .gitignore  CMakeLists.txt  README.md  workspace.code-workspace
include/sfs/: disk.h  disk.hpp  fs.h  fs.hpp  sha256.hpp
src/: CMakeLists.txt
src/driver/: CMakeLists.txt  disk.cpp  fs.cpp  sha256.cpp
src/shell/: CMakeLists.txt  sfssh.cpp
